Update 1.1-dataset and regression.ipynb

--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Neural Networks: Datasets, Loss, and Models\n",
+    "# Introduction to Neural Networks: Datasets, Models, and Losses \n",
     "Author: Pierre Nugues"
    ]
   },
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We extracted counts of letters per chapter and counts of _A_ from the *Salammbô* novel by Flaubert. There are 15 chapters in total."
+    "We extract the counts of letters per chapter and the counts of _A_ from the *Salammbô* novel by Flaubert. There are 15 chapters in total."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "\n",
     "y = np.array(\n",
     "    [2503, 2992, 1042, 2487, 2014, 2805, 5062, 2643, 2126, 1784, 2641, 2766,\n",
-    "     5047, 5312, 1215])\n"
+    "     5047, 5312, 1215])"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "fr = plt.scatter(X, y, c='b', marker='x')\n",
     "plt.title(\"Salammbô\")\n",
     "plt.xlabel(\"Letter count\")\n",
-    "plt.ylabel(\"A count\")\n",
+    "plt.ylabel(\"$A$ count\")\n",
     "plt.show()"
    ]
   },
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We fit three different models"
+    "We fit three different polynomial models"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simpler models are better"
+    "As a rule: Simpler models are better"
    ]
   },
   {
@@ -143,6 +143,7 @@
     "\n",
     "model = models.Sequential([\n",
     "    Dense(1, input_dim=1, activation='linear')])\n",
+    "\n",
     "model.summary()"
    ]
   },
@@ -248,7 +249,7 @@
     "plt.plot(x, model.predict(x), color='red')\n",
     "plt.title(\"Salammbô\")\n",
     "plt.xlabel(\"Letter count\")\n",
-    "plt.ylabel(\"A count\")\n",
+    "plt.ylabel(\"$A$ count\")\n",
     "plt.show()"
    ]
   },
@@ -256,14 +257,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tensorflow's Gradient"
+    "## Tensorflow's Gradients\n",
+    "Tensorflow can compute automatically gradients. See https://www.tensorflow.org/guide/autodiff"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tensorflow can compute automatically gradients. See https://www.tensorflow.org/guide/autodiff"
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $f(x, y) = 4x^2 - y + 9$.\n",
+    "\n",
+    "We have:\n",
+    "$$\\begin{array}{ccc}\n",
+    "\\frac{\\partial f}{\\partial x} &=& 8x\\\\\n",
+    "\\frac{\\partial f}{\\partial y} &=& -1\\\\\n",
+    "\\end{array}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define the variables and we assign them values"
    ]
   },
   {
@@ -273,12 +295,41 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "\n",
     "x = tf.Variable(1.)\n",
-    "y = tf.Variable(2.)\n",
-    "\n",
+    "y = tf.Variable(2.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with tf.GradientTape(persistent=True) as tape:\n",
-    "    f = 4 * x**2  - y + 9\n",
-    "\n",
+    "    f = 4.0 * x**2  - y + 9.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the gradients with regard to $x$ and $y$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_dx = tape.gradient(f, x)\n",
     "df_dx"
    ]
@@ -291,6 +342,13 @@
    "source": [
     "df_dy = tape.gradient(f, y)\n",
     "df_dy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrices"
    ]
   },
   {
@@ -310,16 +368,41 @@
     "b = tf.Variable(tf.zeros((2, 1)))\n",
     "x = tf.random.uniform((2, 1))\n",
     "\n",
+    "y_hat = W @ x + b\n",
+    "\n",
     "print('W:', W)\n",
     "print('b:', b)\n",
-    "x"
+    "print('x:', x)\n",
+    "y_hat"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`GradientTape` computes the partial derivatives of $\\mathbf{W}$ with respect to $w_{ij}$ (first tensor) and of $\\mathbf{b}$ with respect to $b_i$ (second tensor)."
+    "`GradientTape` computes the partial derivatives of $\\mathbf{W}$ with respect to $w_{ij}$ (first tensor) and of $\\mathbf{b}$ with respect to $b_i$ (second tensor).\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\hat{y}_1\\\\\n",
+    "\\hat{y}_2\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "w_{1,1}&w_{1,2}\\\\\n",
+    "w_{2,1}&w_{2,2}\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "x_1\\\\\n",
+    "x_2\n",
+    "\\end{bmatrix}\n",
+    "+\n",
+    "\\begin{bmatrix}\n",
+    "b_1\\\\\n",
+    "b_2\n",
+    "\\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
@@ -337,7 +420,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can add a loss in the form of a mean square error. Using the initial _Salammbô_ example:"
+    "The partial derivatives of the matrix are arranged this way:\n",
+    "\\begin{bmatrix}\n",
+    "\\frac{\\partial \\mathbf{W}}{\\partial w_{1,1}}&\\frac{\\partial \\mathbf{W}}{\\partial w_{1,2}}\\\\\n",
+    "\\frac{\\partial \\mathbf{W}}{\\partial w_{2,1}}&\\frac{\\partial \\mathbf{W}}{\\partial w_{2,2}}\\\\\n",
+    "\\end{bmatrix}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient of the loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now add a loss in the form of a mean square error and compute its gradient. Using the initial _Salammbô_ example:"
    ]
   },
   {
@@ -442,11 +543,18 @@
     "    loss = tf.reduce_mean((y_hat - y)**2)\n",
     "tape.gradient(loss, [W, b])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding the weight updates, we could easily implement a gradient descent. This is left as an exercise."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
