Update 1.1-dataset and regression.ipynb

--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -229,7 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.get_weights()"
+    "salammbo_model = model.get_weights()\n",
+    "salammbo_model"
    ]
   },
   {
@@ -304,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define the function"
+    "We define the function and record it with `GradientTape`"
    ]
   },
   {
@@ -321,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the gradients with regard to $x$ and $y$"
+    "And we compute the gradients with respect to $x$ and $y$ with `gradient()`"
    ]
   },
   {
@@ -355,7 +356,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can apply the partial differentiation to a linear combination involving a matrix and two vectors: $\\mathbf{W} \\cdot \\mathbf{x} + \\mathbf{b}$. Let us create the matrix and the vectors"
+    "We can apply the partial differentiation to a linear combination involving a matrix and two vectors: $\\mathbf{W} \\cdot \\mathbf{x} + \\mathbf{b}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us model two outputs, $y_1$ and $y_2$ with:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\hat{y}_1\\\\\n",
+    "\\hat{y}_2\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "w_{1,1}&w_{1,2}\\\\\n",
+    "w_{2,1}&w_{2,2}\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "x_1\\\\\n",
+    "x_2\n",
+    "\\end{bmatrix}\n",
+    "+\n",
+    "\\begin{bmatrix}\n",
+    "b_1\\\\\n",
+    "b_2\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "and create the matrix and the vectors."
    ]
   },
   {
@@ -380,29 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`GradientTape` computes the partial derivatives of $\\mathbf{W}$ with respect to $w_{ij}$ (first tensor) and of $\\mathbf{b}$ with respect to $b_i$ (second tensor).\n",
-    "\n",
-    "$$\n",
-    "\\begin{bmatrix}\n",
-    "\\hat{y}_1\\\\\n",
-    "\\hat{y}_2\n",
-    "\\end{bmatrix}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "w_{1,1}&w_{1,2}\\\\\n",
-    "w_{2,1}&w_{2,2}\n",
-    "\\end{bmatrix}\n",
-    "\\cdot\n",
-    "\\begin{bmatrix}\n",
-    "x_1\\\\\n",
-    "x_2\n",
-    "\\end{bmatrix}\n",
-    "+\n",
-    "\\begin{bmatrix}\n",
-    "b_1\\\\\n",
-    "b_2\n",
-    "\\end{bmatrix}\n",
-    "$$"
+    "`GradientTape` records operations for which we can compute partial derivatives."
    ]
   },
   {
@@ -412,7 +421,22 @@
    "outputs": [],
    "source": [
     "with tf.GradientTape(persistent=True) as tape:\n",
-    "    y_hat = W @ x + b\n",
+    "    y_hat = W @ x + b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compute the partial derivatives of $\\mathbf{W}$ with respect to $w_{ij}$ (first tensor) and of $\\mathbf{b}$ with respect to $b_i$ (second tensor) with `gradient()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tape.gradient(y_hat, [W, b])"
    ]
   },
@@ -472,7 +496,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a model that has not yet reached the minimum"
+    "Our model was"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salammbo_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us compute the gradient of a model that has not yet reached the minimum"
    ]
   },
   {
@@ -508,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let us compute the gradient with a model that has reached the minimum."
+    "Now let us compute the gradient with the model that has reached the minimum (`salammbo_model`)."
    ]
   },
   {
@@ -517,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(W, b) = model.get_weights()\n",
+    "(W, b) = salammbo_model\n",
     "W = tf.Variable(W)\n",
     "b = tf.Variable(b)"
    ]
