--- a/programs/1.2-salammbo classification.ipynb
+++ b/programs/1.2-salammbo classification.ipynb
@@ -81,7 +81,7 @@
     "fr = plt.scatter(X_french[:,0], X_french[:,1], c='b', marker='x')\n",
     "plt.title(\"Salammbô\")\n",
     "plt.xlabel(\"Letter count\")\n",
-    "plt.ylabel(\"A count\")\n",
+    "plt.ylabel(\"$A$ count\")\n",
     "plt.legend((en, fr), ('English', 'French'), loc='lower right', scatterpoints=1)\n",
     "plt.show()"
    ]
@@ -104,9 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us extend the dataset to cover all the paragraphs, where we will count all the letters.<br/> Structure of the dataset:<br/>\n",
+    "Let us extend the dataset to cover all the paragraphs in the novel, French and English, where we will count all the letters. Paragraph will be defined the newline character: `\\n`.<br/> Structure of the dataset:<br/>\n",
     "\n",
-    "|Obs.   | *x*                              |class   |\n",
+    "|Obs.#   | $\\mathbf{X}$                              | $\\mathbf{y}$  |\n",
     "|-------|----------------------------------|--------|\n",
     "|para_1 | a_counts, b_counts, c_counts, ...| English|\n",
     "|para_2 |a_counts, b_counts, c_counts, ... |English |\n",
@@ -157,17 +157,43 @@
     "salammbo_fr = open('../../EDAN20/programs/corpus/Salammbo/salammbo.txt').read().strip().lower()\n",
     "\n",
     "para_en = filter(None, salammbo_en.split('\\n'))\n",
-    "para_fr = filter(None, salammbo_fr.split('\\n'))\n",
-    "\n",
+    "para_fr = filter(None, salammbo_fr.split('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(filter(None, salammbo_fr.split('\\n')))[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "counts_en = list(filter(None, map(count_chars, para_en)))\n",
     "counts_fr = list(filter(None, map(count_chars, para_fr)))\n",
-    "counts = counts_en + counts_fr\n",
-    "counts[:5]"
+    "counts_fr[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = counts_en + counts_fr"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Formatting the Dataset"
    ]
@@ -232,8 +258,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Training and Validation Sets"
    ]
@@ -624,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -638,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
