--- a/programs/1.3-logistic regression.ipynb
+++ b/programs/1.3-logistic regression.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initial Dataset from Berkson on *Using Logistic Regression for Classification* (1944)"
+    "Initial dataset from Joseph Berkson on *Application of the Logistic Function to Bio-Assay* (1944), (https://www.jstor.org/stable/2280041)"
    ]
   },
   {
@@ -34,6 +34,13 @@
    "metadata": {},
    "source": [
     "## Formatting the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Following Berkson, $y = 1$ is die, while $y = 0$ is survive"
    ]
   },
   {
@@ -169,7 +176,8 @@
     "The crossentropy loss is defined as:\n",
     "$\n",
     "H(P,M) = - \\frac{1}{|X|} \\sum\\limits_{x \\in X} {P(x)\\log M(x),} \n",
-    "$"
+    "$\n",
+    "where $P$ and $M$ its probability."
    ]
   },
   {
@@ -276,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
