--- a/programs/1.4-multiclass.ipynb
+++ b/programs/1.4-multiclass.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Neural Networks: Multiple Categories\n",
+    "# Introduction to Neural Networks: Classification with Multiple Categories\n",
     "\n",
     "Author: Pierre Nugues"
    ]
@@ -13,7 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fisher's Dataset on Irises"
+    "## Fisher's Dataset on Irises\n",
+    "Ronald Fisher,  The use of multiple measurements in taxonomic problems, _Annals of Eugenics_, 1936 (https://onlinelibrary.wiley.com/doi/epdf/10.1111/j.1469-1809.1936.tb02137.x)"
    ]
   },
   {
@@ -273,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.utils import to_categorical\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "Y_cat = to_categorical(y)\n",
     "Y_cat[:5]"
    ]
@@ -514,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -528,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
