--- a/programs/2.1-convolution.ipynb
+++ b/programs/2.1-convolution.ipynb
@@ -116,9 +116,9 @@
    "metadata": {},
    "source": [
     "Assuming the kernel is centered at 0, a convolution is defined by\n",
-    "$\n",
+    "$$\n",
     "(f \\ast g)(x, y) = \\displaystyle{\\sum_{i = -M/2}^{M/2}{\\sum_{j =-N/2}^{N/2} {f(x -i, y-j)g(i, j)}}},\n",
-    "$\n",
+    "$$\n",
     "where $f$ is the image and $g$, the kernel. "
    ]
   },
@@ -255,7 +255,8 @@
     "f,(p0, p1, p2)=plt.subplots(ncols=3)\n",
     "p0.imshow(input_img, cmap=plt.cm.gray)\n",
     "p1.imshow(Gx_norm, cmap=plt.cm.gray)\n",
-    "p2.imshow(Gy_norm, cmap=plt.cm.gray)"
+    "im2 = p2.imshow(Gy_norm, cmap=plt.cm.gray)\n",
+    "plt.colorbar(im2)"
    ]
   },
   {
@@ -300,8 +301,36 @@
    "source": [
     "plt.figure(figsize=(8,4))\n",
     "f,(p1,p2) = plt.subplots(ncols=2)\n",
-    "p1.imshow(norm, cmap=plt.cm.gray)\n",
-    "p2.imshow(theta)"
+    "im1 = p1.imshow(norm, cmap=plt.cm.gray)\n",
+    "im2 = p2.imshow(theta)\n",
+    "plt.colorbar(im2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pattern angle in gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orientation = np.pi/2 - np.abs(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow(orientation)\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -314,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -328,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
