--- a/programs/1.2-salammbo classification.ipynb
+++ b/programs/1.2-salammbo classification.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The counts of letters and _A_ broken down by chapter in *Salammbô* in French and its translation in English. The $\\mathbf{X}$ matrix contains the counts and $y$ the language; French: 1 and English: 0."
+    "The counts of letters and _A_ broken down by chapter in *Salammbô* in French and its translation in English. The $\\mathbf{X}$ matrix contains the counts and $\\mathbf{y}$ the language; French: 1 and English: 0."
    ]
   },
   {
@@ -404,7 +404,7 @@
     "                    epochs=100, \n",
     "                    batch_size=32, \n",
     "                    validation_data=(X_val, y_val), \n",
-    "                    verbose=0)"
+    "                    verbose=1)"
    ]
   },
   {
