--- a/programs/4.1-nn-pos-tagger.ipynb
+++ b/programs/4.1-nn-pos-tagger.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-15 21:12:51.353968: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-16 11:37:18.447186: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
      ]
@@ -53,7 +53,6 @@
     "from tensorflow import keras\n",
     "import tensorflow.keras.callbacks\n",
     "from tensorflow.keras import models\n",
-    "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.layers import LSTM, Bidirectional, SimpleRNN, Dense, Embedding, Dropout\n",
     "\n",
     "\n",
@@ -613,7 +612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-15 21:13:01.329403: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-16 11:37:34.648792: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -721,14 +720,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3238/3238 [==============================] - 14s 4ms/step - loss: 0.7132 - accuracy: 0.8229 - val_loss: 0.4864 - val_accuracy: 0.8938\n",
+      "3238/3238 [==============================] - 20s 6ms/step - loss: 0.7132 - accuracy: 0.8229 - val_loss: 0.4864 - val_accuracy: 0.8938\n",
       "Epoch 2/4\n",
-      "3238/3238 [==============================] - 14s 4ms/step - loss: 0.2118 - accuracy: 0.9538 - val_loss: 0.5299 - val_accuracy: 0.9042\n",
+      "3238/3238 [==============================] - 18s 5ms/step - loss: 0.2118 - accuracy: 0.9538 - val_loss: 0.5299 - val_accuracy: 0.9042\n",
       "Epoch 3/4\n",
-      "3238/3238 [==============================] - 14s 4ms/step - loss: 0.1622 - accuracy: 0.9698 - val_loss: 0.5635 - val_accuracy: 0.9061\n",
+      "3238/3238 [==============================] - 19s 6ms/step - loss: 0.1622 - accuracy: 0.9698 - val_loss: 0.5635 - val_accuracy: 0.9061\n",
       "Epoch 4/4\n",
-      "3238/3238 [==============================] - 14s 4ms/step - loss: 0.1364 - accuracy: 0.9766 - val_loss: 0.5914 - val_accuracy: 0.9086\n",
-      "Time: 0.9415098913000002\n"
+      "3238/3238 [==============================] - 21s 6ms/step - loss: 0.1364 - accuracy: 0.9766 - val_loss: 0.5914 - val_accuracy: 0.9086\n",
+      "Time: 1.3242433449666668\n"
      ]
     }
    ],
@@ -962,7 +961,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 81ms/step\n"
+      "1/1 [==============================] - 0s 125ms/step\n"
      ]
     },
     {
@@ -993,7 +992,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 6ms/step\n"
+      "1/1 [==============================] - 0s 8ms/step\n"
      ]
     },
     {
@@ -1020,7 +1019,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 8ms/step\n"
+      "1/1 [==============================] - 0s 11ms/step\n"
      ]
     },
     {
@@ -1054,7 +1053,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "796/796 [==============================] - 1s 792us/step - loss: 0.4511 - accuracy: 0.8986\n",
+      "796/796 [==============================] - 2s 2ms/step - loss: 0.4511 - accuracy: 0.8986\n",
       "Optimizer rmsprop Scaler True Epochs 4 Batch size 64 Simple model True Mini corpus False\n",
       "Loss: 0.4510786533355713\n",
       "Accuracy: 0.8986486196517944\n"
@@ -1131,16 +1130,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 6ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
       "That round table might collapse .\n",
       "['DET', 'NOUN', 'NOUN', 'AUX', 'NOUN', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 6ms/step\n",
+      "1/1 [==============================] - 0s 9ms/step\n",
       "The man can learn well .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'ADV', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 7ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
       "The man can swim .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 6ms/step\n",
+      "1/1 [==============================] - 0s 9ms/step\n",
       "The man can simwo .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n"
      ]
