updates for lecture

--- a/programs/4.2-nn-pos-tagger-embeddings.ipynb
+++ b/programs/4.2-nn-pos-tagger-embeddings.ipynb
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-16 11:35:12.916195: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-22 12:25:08.755589: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
      ]
@@ -49,6 +49,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import models\n",
     "from tensorflow.keras import initializers\n",
@@ -89,7 +90,7 @@
    "source": [
     "random.seed(1234)\n",
     "np.random.seed(1234)\n",
-    "keras.utils.set_random_seed(1234)"
+    "tf.keras.utils.set_random_seed(1234)"
    ]
   },
   {
@@ -724,7 +725,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-16 11:35:58.266319: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-22 12:26:35.551674: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -799,7 +800,7 @@
    "outputs": [],
    "source": [
     "callbacks = [\n",
-    "    keras.callbacks.ModelCheckpoint('simple_embeddings.keras',\n",
+    "    tf.keras.callbacks.ModelCheckpoint('simple_embeddings.keras',\n",
     "                                   save_best_only=True)\n",
     "]"
    ]
@@ -814,19 +815,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/8\n",
-      "1619/1619 [==============================] - 265s 163ms/step - loss: 0.5394 - accuracy: 0.8425 - val_loss: 0.3247 - val_accuracy: 0.9009\n",
+      "1619/1619 [==============================] - 411s 253ms/step - loss: 0.5394 - accuracy: 0.8425 - val_loss: 0.3247 - val_accuracy: 0.9009\n",
       "Epoch 2/8\n",
-      "1619/1619 [==============================] - 239s 148ms/step - loss: 0.2278 - accuracy: 0.9300 - val_loss: 0.2760 - val_accuracy: 0.9150\n",
+      "1619/1619 [==============================] - 323s 200ms/step - loss: 0.2278 - accuracy: 0.9300 - val_loss: 0.2760 - val_accuracy: 0.9150\n",
       "Epoch 3/8\n",
-      "1619/1619 [==============================] - 245s 152ms/step - loss: 0.1830 - accuracy: 0.9435 - val_loss: 0.2628 - val_accuracy: 0.9203\n",
+      "1619/1619 [==============================] - 313s 194ms/step - loss: 0.1830 - accuracy: 0.9435 - val_loss: 0.2628 - val_accuracy: 0.9203\n",
       "Epoch 4/8\n",
-      "1619/1619 [==============================] - 247s 152ms/step - loss: 0.1598 - accuracy: 0.9509 - val_loss: 0.2563 - val_accuracy: 0.9222\n",
+      "1619/1619 [==============================] - 326s 201ms/step - loss: 0.1598 - accuracy: 0.9509 - val_loss: 0.2563 - val_accuracy: 0.9222\n",
       "Epoch 5/8\n",
-      "1619/1619 [==============================] - 247s 153ms/step - loss: 0.1437 - accuracy: 0.9562 - val_loss: 0.2515 - val_accuracy: 0.9238\n",
+      "1619/1619 [==============================] - 337s 208ms/step - loss: 0.1437 - accuracy: 0.9562 - val_loss: 0.2515 - val_accuracy: 0.9238\n",
       "Epoch 6/8\n",
-      "1619/1619 [==============================] - 226s 140ms/step - loss: 0.1316 - accuracy: 0.9601 - val_loss: 0.2555 - val_accuracy: 0.9233\n",
+      "1619/1619 [==============================] - 262s 162ms/step - loss: 0.1316 - accuracy: 0.9601 - val_loss: 0.2555 - val_accuracy: 0.9233\n",
       "Epoch 7/8\n",
-      "1619/1619 [==============================] - 223s 138ms/step - loss: 0.1219 - accuracy: 0.9634 - val_loss: 0.2561 - val_accuracy: 0.9222\n",
+      "1619/1619 [==============================] - 225s 139ms/step - loss: 0.1219 - accuracy: 0.9634 - val_loss: 0.2561 - val_accuracy: 0.9222\n",
       "Epoch 8/8\n",
       "1619/1619 [==============================] - 225s 139ms/step - loss: 0.1134 - accuracy: 0.9658 - val_loss: 0.2583 - val_accuracy: 0.9231\n"
      ]
@@ -917,7 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.load_model('simple_embeddings.keras')"
+    "model = tf.keras.models.load_model('simple_embeddings.keras')"
    ]
   },
   {
@@ -936,7 +937,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "796/796 [==============================] - 1s 751us/step - loss: 0.2385 - accuracy: 0.9272\n",
+      "796/796 [==============================] - 1s 851us/step - loss: 0.2385 - accuracy: 0.9272\n",
       "Optimizer rmsprop Epochs 8 Batch size 128 Mini corpus False\n",
       "Loss: 0.2384883314371109\n",
       "Accuracy: 0.9272077083587646\n"
@@ -1020,16 +1021,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 78ms/step\n",
+      "1/1 [==============================] - 0s 82ms/step\n",
       "That round table might collapse .\n",
       "['DET', 'DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
       "The man can learn well .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'ADV', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 19ms/step\n",
       "The man can swim .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
       "The man can simwo .\n",
       "['DET', 'NOUN', 'AUX', 'PUNCT', 'PUNCT']\n"
      ]
