--- a/programs/4.3-rnn-pos-tagger.ipynb
+++ b/programs/4.3-rnn-pos-tagger.ipynb
@@ -34,9 +34,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-19 12:26:11.365808: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+      "2022-09-22 12:22:33.149779: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -49,17 +48,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import models\n",
-    "from tensorflow.keras import initializers\n",
-    "from tensorflow.keras.layers import LSTM, Bidirectional, SimpleRNN, Dense, Embedding, Flatten\n",
+    "from tensorflow.keras import models, initializers\n",
+    "from tensorflow.keras.layers import LSTM, Bidirectional, SimpleRNN, Dense, Embedding\n",
     "from tensorflow.keras.utils import pad_sequences\n",
-    "from keras.models import load_model\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "\n",
-    "from sklearn.feature_extraction import DictVectorizer\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline"
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.utils import to_categorical"
    ]
   },
   {
@@ -92,7 +87,7 @@
    "source": [
     "random.seed(1234)\n",
     "np.random.seed(1234)\n",
-    "keras.utils.set_random_seed(1234)"
+    "tf.keras.utils.set_random_seed(1234)"
    ]
   },
   {
@@ -800,7 +795,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-09-19 12:27:46.489698: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-09-22 12:22:52.496923: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -886,7 +881,7 @@
    "outputs": [],
    "source": [
     "callbacks = [\n",
-    "    keras.callbacks.ModelCheckpoint('simple_lstm.keras',\n",
+    "    tf.keras.callbacks.ModelCheckpoint('simple_lstm.keras',\n",
     "                                   save_best_only=True)\n",
     "]"
    ]
@@ -901,25 +896,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "98/98 [==============================] - 148s 1s/step - loss: 0.1217 - accuracy: 0.6764 - val_loss: 0.0955 - val_accuracy: 0.8386\n",
+      "98/98 [==============================] - 210s 2s/step - loss: 0.1217 - accuracy: 0.6764 - val_loss: 0.0955 - val_accuracy: 0.8386\n",
       "Epoch 2/10\n",
-      "98/98 [==============================] - 139s 1s/step - loss: 0.0380 - accuracy: 0.8943 - val_loss: 0.0579 - val_accuracy: 0.8970\n",
+      "98/98 [==============================] - 244s 2s/step - loss: 0.0380 - accuracy: 0.8943 - val_loss: 0.0579 - val_accuracy: 0.8970\n",
       "Epoch 3/10\n",
-      "98/98 [==============================] - 771s 8s/step - loss: 0.0250 - accuracy: 0.9278 - val_loss: 0.0469 - val_accuracy: 0.9164\n",
+      "98/98 [==============================] - 236s 2s/step - loss: 0.0250 - accuracy: 0.9278 - val_loss: 0.0469 - val_accuracy: 0.9164\n",
       "Epoch 4/10\n",
-      "98/98 [==============================] - 3780s 39s/step - loss: 0.0198 - accuracy: 0.9422 - val_loss: 0.0422 - val_accuracy: 0.9239\n",
+      "98/98 [==============================] - 204s 2s/step - loss: 0.0198 - accuracy: 0.9422 - val_loss: 0.0422 - val_accuracy: 0.9239\n",
       "Epoch 5/10\n",
-      "98/98 [==============================] - 128s 1s/step - loss: 0.0166 - accuracy: 0.9514 - val_loss: 0.0394 - val_accuracy: 0.9287\n",
+      "98/98 [==============================] - 193s 2s/step - loss: 0.0166 - accuracy: 0.9514 - val_loss: 0.0394 - val_accuracy: 0.9287\n",
       "Epoch 6/10\n",
-      "98/98 [==============================] - 139s 1s/step - loss: 0.0143 - accuracy: 0.9581 - val_loss: 0.0386 - val_accuracy: 0.9301\n",
+      "98/98 [==============================] - 195s 2s/step - loss: 0.0143 - accuracy: 0.9581 - val_loss: 0.0386 - val_accuracy: 0.9301\n",
       "Epoch 7/10\n",
-      "98/98 [==============================] - 132s 1s/step - loss: 0.0126 - accuracy: 0.9632 - val_loss: 0.0371 - val_accuracy: 0.9321\n",
+      "98/98 [==============================] - 201s 2s/step - loss: 0.0126 - accuracy: 0.9632 - val_loss: 0.0371 - val_accuracy: 0.9321\n",
       "Epoch 8/10\n",
-      "98/98 [==============================] - 129s 1s/step - loss: 0.0111 - accuracy: 0.9679 - val_loss: 0.0361 - val_accuracy: 0.9341\n",
+      "98/98 [==============================] - 207s 2s/step - loss: 0.0111 - accuracy: 0.9679 - val_loss: 0.0361 - val_accuracy: 0.9341\n",
       "Epoch 9/10\n",
-      "98/98 [==============================] - 132s 1s/step - loss: 0.0099 - accuracy: 0.9717 - val_loss: 0.0361 - val_accuracy: 0.9346\n",
+      "98/98 [==============================] - 195s 2s/step - loss: 0.0099 - accuracy: 0.9717 - val_loss: 0.0361 - val_accuracy: 0.9346\n",
       "Epoch 10/10\n",
-      "98/98 [==============================] - 130s 1s/step - loss: 0.0087 - accuracy: 0.9752 - val_loss: 0.0357 - val_accuracy: 0.9363\n"
+      "98/98 [==============================] - 199s 2s/step - loss: 0.0087 - accuracy: 0.9752 - val_loss: 0.0357 - val_accuracy: 0.9363\n"
      ]
     }
    ],
@@ -1010,7 +1005,7 @@
    },
    "outputs": [],
    "source": [
-    "model = keras.models.load_model('simple_lstm.keras')"
+    "model = load_model('simple_lstm.keras')"
    ]
   },
   {
@@ -1101,7 +1096,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65/65 [==============================] - 7s 58ms/step - loss: 0.0293 - accuracy: 0.9393\n",
+      "65/65 [==============================] - 11s 106ms/step - loss: 0.0293 - accuracy: 0.9393\n",
       "Loss: 0.029303688555955887\n",
       "Accuracy: 0.9393463134765625\n"
      ]
@@ -1202,7 +1197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65/65 [==============================] - 6s 59ms/step\n"
+      "65/65 [==============================] - 12s 105ms/step\n"
      ]
     }
    ],
@@ -1591,16 +1586,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 2s 2s/step\n",
+      "1/1 [==============================] - 3s 3s/step\n",
       "That round table might collapse .\n",
       "['PRON', 'ADJ', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 73ms/step\n",
       "The man can learn well .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'ADV', 'PUNCT']\n",
-      "1/1 [==============================] - 2s 2s/step\n",
+      "1/1 [==============================] - 4s 4s/step\n",
       "The man can swim .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n",
-      "1/1 [==============================] - 0s 40ms/step\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
       "The man can simwo .\n",
       "['DET', 'NOUN', 'AUX', 'VERB', 'PUNCT']\n"
      ]
