--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can apply the partial differentiation to a linear combination involving a matrix and two vectors: $\\mathbf{W} \\cdot \\mathbf{x} + \\mathbf{b}$."
+    "We can apply the partial differentiation to a linear combination involving a matrix and two vectors: $\\mathbf{W} \\mathbf{x} + \\mathbf{b}$."
    ]
   },
   {
@@ -375,7 +375,7 @@
     "w_{1,1}&w_{1,2}\\\\\n",
     "w_{2,1}&w_{2,2}\n",
     "\\end{bmatrix}\n",
-    "\\cdot\n",
+    "\n",
     "\\begin{bmatrix}\n",
     "x_1\\\\\n",
     "x_2\n",
@@ -594,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -608,7 +608,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
